--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
             <main>
                 <section class="section-about">
-                    <div class="u-center-text u-margin-bottom-80">
+                    <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h2>
@@ -43,7 +43,21 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text content
+                        <h3 class="heading-terciary u-margin-bottom-small">
+                            You're going to fall in love with nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea veritatis, qui, aspernatur mollitia illo enim laboriosam perspiciatis tenetur quibusdam 
+                        </p>
+
+                        <h3 class="heading-terciary u-margin-bottom-small">
+                            Live adventures like you never have before
+                        </h3>
+                        <p class="paragraph">
+                             aspernatur mollitia illo enim laboriosam perspiciatis tenetur quibusdam, voluptatum consequatur quae inventore. Aliquam porro sed totam nemo culpa!
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         Image composition
