--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">
+            <a href="#section-tours" class="btn btn--white btn--animated">
                 Discover our tours
             </a>
         </div>
@@ -137,7 +137,7 @@
                     </div>
                 </section>
 
-                <section class="section-tours">
+                <section class="section-tours" id="section-tours">
                     <div class="u-center-text u-margin-bottom-big">
                         <h2 class="heading-secondary">
                             Most popular tours
@@ -173,7 +173,7 @@
                                             <p class="card__price-only">Only</p>
                                             <p class="card__price-value">$297</p>
                                         </div>
-                                        <a href="#" class="btn btn--white">Book now</a>
+                                        <a href="#popup" class="btn btn--white">Book now</a>
                                     </div>
                                 </div>
 
@@ -210,7 +210,7 @@
                                                 <p class="card__price-only">Only</p>
                                                 <p class="card__price-value">$497</p>
                                             </div>
-                                            <a href="#" class="btn btn--white">Book now</a>
+                                            <a href="#popup" class="btn btn--white">Book now</a>
                                         </div>
                                     </div>
     
@@ -246,7 +246,7 @@
                                                     <p class="card__price-only">Only</p>
                                                     <p class="card__price-value">$897</p>
                                                 </div>
-                                                <a href="#" class="btn btn--white">Book now</a>
+                                                <a href="#popup" class="btn btn--white">Book now</a>
                                             </div>
                                         </div>
         
@@ -406,13 +406,17 @@
                 </div>
             </footer>
 
-            <div class="popup">
+            <div class="popup" id="popup">
                 <div class="popup__content">
                     <div class="popup__left">
                         <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
                         <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
                     </div>
                     <div class="popup__right">
+                        <!-- if the section tours becomes the target, the pseu
+                        pseudoclass on popup will close
+                        -->
+                        <a href="#section-tours" class="popup__close">&times;</a>
                         <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                         <h3 class="heading-terciary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                         <p class="popup__text">
